implement join game logic
